@@ -1,3 +1,8 @@
+2004-12-28  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* lib/zip_free.c (_zip_free): correctly set error of open
+	files to ZIP_ER_ZIPCLOSED.
+
 2004-12-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* lib/zip.h: rename zip_read_func to zip_source_callback, struct
